--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Parallax Scrolling Example</title>
+<title>Parallax Scrolling with Animations</title>
 <style>
   body, html {
     margin: 0;
@@ -11,6 +11,7 @@
     font-family: Arial, sans-serif;
     height: 100%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
   }
 
   .parallax-section {
@@ -20,27 +21,54 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
+    animation: fadeIn 3s ease-in-out;
   }
 
   .section-content {
     padding: 50px;
     text-align: center;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
+    background: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
     font-size: 2em;
+    animation: slideUp 2s ease-in-out;
   }
 
   /* Parallax Backgrounds */
   #section1 {
-    background-image: url('https://via.placeholder.com/1200x800');
+    background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?auto=format&fit=crop&w=1350&q=80');
   }
 
   #section2 {
-    background-image: url('https://via.placeholder.com/1200x800/ff7f7f/333333');
+    background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1350&q=80');
   }
 
   #section3 {
-    background-image: url('https://via.placeholder.com/1200x800/87ceeb/333333');
+    background-image: url('https://images.unsplash.com/photo-1519608487953-e999c86e7455?auto=format&fit=crop&w=1350&q=80');
+  }
+
+  /* Regular Sections */
+  .regular-section {
+    background: #333;
+    color: white;
+    padding: 50px;
+    text-align: center;
+    font-size: 1.5em;
+  }
+
+  /* Animations */
+  @keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+
+  @keyframes slideUp {
+    from { transform: translateY(50px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
   }
 </style>
 </head>
@@ -50,20 +78,20 @@
   <div class="section-content">Welcome to Parallax Scrolling</div>
 </div>
 
-<div class="section-content" style="background: #333; color: white;">
-  This is a regular section without parallax.
+<div class="regular-section">
+  This is a regular section to enhance the parallax effect contrast.
 </div>
 
 <div id="section2" class="parallax-section">
-  <div class="section-content">Amazing Scrolling Effect!</div>
+  <div class="section-content">Breathtaking Views & Smooth Animations!</div>
 </div>
 
-<div class="section-content" style="background: #444; color: white;">
-  Another regular section for contrast.
+<div class="regular-section">
+  Another regular section with a sleek design.
 </div>
 
 <div id="section3" class="parallax-section">
-  <div class="section-content">Smooth and Beautiful</div>
+  <div class="section-content">Experience the Depth of Parallax</div>
 </div>
 
 </body>
