--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Parallax Scrolling with Animations</title>
+<title>Full Stack Developer Portfolio</title>
 <style>
   body, html {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 100%;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    background: #111;
+    color: #fff;
   }
 
   .parallax-section {
@@ -30,34 +32,36 @@
   }
 
   .section-content {
-    padding: 50px;
+    padding: 40px;
     text-align: center;
-    background: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-    font-size: 2em;
+    background: rgba(0, 0, 0, 0.75);
+    border-radius: 15px;
+    font-size: 2.5em;
     animation: slideUp 2s ease-in-out;
+    max-width: 800px;
   }
 
   /* Parallax Backgrounds */
   #section1 {
-    background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?auto=format&fit=crop&w=1350&q=80');
+    background-image: url('https://images.unsplash.com/photo-1581091870621-1c09e3f60a90?auto=format&fit=crop&w=1500&q=80');
   }
 
   #section2 {
-    background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1350&q=80');
+    background-image: url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1500&q=80');
   }
 
   #section3 {
-    background-image: url('https://images.unsplash.com/photo-1519608487953-e999c86e7455?auto=format&fit=crop&w=1350&q=80');
+    background-image: url('https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?auto=format&fit=crop&w=1500&q=80');
   }
 
   /* Regular Sections */
   .regular-section {
-    background: #333;
+    background: #222;
     color: white;
-    padding: 50px;
+    padding: 60px 20px;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.8em;
+    line-height: 1.6;
   }
 
   /* Animations */
@@ -70,28 +74,57 @@
     from { transform: translateY(50px); opacity: 0; }
     to { transform: translateY(0); opacity: 1; }
   }
+
+  /* Button Styling */
+  .cta-button {
+    background: #00b894;
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 30px;
+    font-size: 1.2em;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+
+  .cta-button:hover {
+    background: #098c6d;
+  }
 </style>
 </head>
 <body>
 
 <div id="section1" class="parallax-section">
-  <div class="section-content">Welcome to Parallax Scrolling</div>
+  <div class="section-content">
+    <h1>Hi, I'm a Full Stack Developer</h1>
+    <p>Crafting Modern Web & Mobile Solutions</p>
+    <button class="cta-button">View My Work</button>
+  </div>
 </div>
 
 <div class="regular-section">
-  This is a regular section to enhance the parallax effect contrast.
+  <h2>About Me</h2>
+  <p>I am passionate about building responsive web applications and dynamic user experiences with technologies like HTML, CSS, JavaScript, React, Node.js, and more.</p>
 </div>
 
 <div id="section2" class="parallax-section">
-  <div class="section-content">Breathtaking Views & Smooth Animations!</div>
+  <div class="section-content">
+    <h1>My Expertise</h1>
+    <p>Frontend & Backend Development, API Integrations, and Scalable Architectures.</p>
+  </div>
 </div>
 
 <div class="regular-section">
-  Another regular section with a sleek design.
+  <h2>Projects</h2>
+  <p>From eCommerce platforms to mobile applications, I have developed a variety of projects tailored to client needs.</p>
 </div>
 
 <div id="section3" class="parallax-section">
-  <div class="section-content">Experience the Depth of Parallax</div>
+  <div class="section-content">
+    <h1>Let's Collaborate!</h1>
+    <p>Ready to bring your ideas to life?</p>
+    <button class="cta-button">Contact Me</button>
+  </div>
 </div>
 
 </body>
