--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,26 @@
     max-width: 800px;
   }
 
+  /* Typewriter Effect */
+  .typewriter {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: typing 4s steps(40, end), blink-caret 0.75s step-end infinite;
+  }
+
+  @keyframes typing {
+    from { width: 0; }
+    to { width: 100%; }
+  }
+
+  @keyframes blink-caret {
+    from, to { border-color: transparent; }
+    50% { border-color: orange; }
+  }
+
   /* Parallax Backgrounds */
   #section1 {
     background-image: url('https://images.unsplash.com/photo-1581091870621-1c09e3f60a90?auto=format&fit=crop&w=1500&q=80');
@@ -96,7 +116,7 @@
 
 <div id="section1" class="parallax-section">
   <div class="section-content">
-    <h1>Hi, I'm a Full Stack Developer</h1>
+    <h1 class="typewriter">Hi, My name is Musharaf and I'm a Full Stack Mobile Developer</h1>
     <p>Crafting Modern Web & Mobile Solutions</p>
     <button class="cta-button">View My Work</button>
   </div>
@@ -123,7 +143,7 @@
   <div class="section-content">
     <h1>Let's Collaborate!</h1>
     <p>Ready to bring your ideas to life?</p>
-    <button class="cta-button">Contact Me</button>
+    <a href="https://www.linkedin.com/in/muhammad-musharaf/" target="_blank"><button class="cta-button">Contact Me</button></a>
   </div>
 </div>
 
