--- a/public/index.html
+++ b/public/index.html
@@ -43,12 +43,13 @@
 
   /* Typewriter Effect */
   .typewriter {
+    display: inline-block;
     overflow: hidden;
     border-right: .15em solid orange;
     white-space: nowrap;
     margin: 0 auto;
-    letter-spacing: .15em;
-    animation: typing 4s steps(40, end), blink-caret 0.75s step-end infinite;
+    letter-spacing: .1em;
+    animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
   }
 
   @keyframes typing {
@@ -57,7 +58,7 @@
   }
 
   @keyframes blink-caret {
-    from, to { border-color: transparent; }
+    0%, 100% { border-color: transparent; }
     50% { border-color: orange; }
   }
 
