Type Writer Fixes

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     overflow: hidden;
     border-right: 3px solid orange;
     margin: 0 auto;
-    animation: typing 3s steps(30, end) infinite alternate, blink-caret 0.75s step-end infinite;
+    animation: typing 3s steps(30, end) 1, blink-caret 0.75s step-end infinite;
   }
 
   @keyframes typing {
@@ -116,7 +116,7 @@
 
 <div id="section1" class="parallax-section">
   <div class="section-content">
-    <h1 class="typewriter">Hi, I'm Musharaf, a Full Stack Mobile Developer</h1>
+    <h1 class="typewriter">Hi, I'm Musharaf, Full Stack Mobile Dev</h1>
     <p>Crafting Modern Web & Mobile Solutions</p>
     <button class="cta-button">View My Work</button>
   </div>
