--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,14 @@
     margin: 0 auto;
     animation: typing 3s steps(30, end) 1, blink-caret 0.75s step-end infinite;
   }
+  .scroll-indicator {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.2em;
+    animation: bounce 1.5s infinite;
+  }
 
   @keyframes typing {
     from { width: 0; }
