--- a/public/index.html
+++ b/public/index.html
@@ -21,39 +21,42 @@
   }
   
   .light-mode {
-    background: #fff;
-    color: #111;
+    background: #fff; /* Pure white */
+    color: #000; /* Pure black */
   }
 
   .toggle-container {
-    position: fixed;
-    top: 15px;
-    left: 15px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
+  position: fixed;
+  top: 30px; /* Adjust this value to control the space from the top */
+  left: 15px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding-top: 20px; /* Add top padding here */
+  z-index: 1000; /* Ensure it's above other elements */
+  background: rgba(255, 0, 0, 0); /* Debugging: Remove after testing */
+}
 
-  .toggle-switch {
-    width: 50px;
-    height: 25px;
-    background: #333;
-    border-radius: 25px;
-    position: relative;
-    transition: background 0.5s;
-  }
+.toggle-switch {
+  width: 50px;
+  height: 25px;
+  background: #333;
+  border-radius: 25px;
+  position: relative;
+  transition: background 0.5s;
+}
 
-  .toggle-circle {
-    width: 20px;
-    height: 20px;
-    background: yellow;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 5px;
-    transition: left 0.5s, background 0.5s;
-  }
+.toggle-circle {
+  width: 20px;
+  height: 20px;
+  background: yellow;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 5px;
+  transition: left 0.5s, background 0.5s;
+}
 
   .light-mode .toggle-switch {
     background: #ddd;
@@ -100,11 +103,21 @@
   }
   .scroll-indicator {
     position: absolute;
-    bottom: 20px;
+    bottom: 100px;
     left: 50%;
     transform: translateX(-50%);
     font-size: 1.2em;
     animation: bounce 1.5s infinite;
+  }
+
+  .light-mode .regular-section {
+    background: #e0e0e0; /* Light gray background for light mode */
+    color: #333; /* Dark text for light mode */
+  }
+  .light-mode .section-content {
+    background: rgba(255, 255, 255, 0.8); /* Lighter background for light mode */
+    color: #333; /* Dark text for light mode */
+    border: 1px solid rgba(0, 0, 0, 0.2); /* Adjusted border color */
   }
 
   @keyframes typing {
@@ -170,11 +183,11 @@
 </head>
 <body class="dark-mode">
   
-<div class="toggle-container" onclick="toggleMode()">
-  <div class="toggle-switch">
-    <div class="toggle-circle"></div>
+  <div class="toggle-container" onclick="toggleMode()">
+    <div class="toggle-switch">
+      <div class="toggle-circle"></div>
+    </div>
   </div>
-</div>
 
 <div id="section1" class="parallax-section">
   <div class="section-content">
@@ -182,7 +195,7 @@
     <p>Crafting Modern Web & Mobile Solutions</p>
     <button class="cta-button">View My Work</button>
   </div>
-  <div class="scroll-indicator">↓ Scroll More ↓</div>
+  <div class="scroll-indicator">↓ Scroll Mores ↓</div>
 </div>
 
 <div class="regular-section">
@@ -210,8 +223,9 @@
   </div>
 </div>
 
-  <script>
- function toggleMode() {
+<script>
+  function toggleMode() {
+    console.log("Toggle button clicked!"); // Debugging line
     const body = document.body;
     const isLightMode = body.classList.toggle("light-mode");
 
@@ -219,7 +233,6 @@
       localStorage.setItem("theme", "light");
     } else {
       localStorage.setItem("theme", "dark");
-      body.classList.remove("light-mode");
     }
   }
 
